--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.springframework</groupId>
-    <artifactId>jb-hello-world-maven</artifactId>
+    <groupId>com.mycompany.mydepartment</groupId>
+  <artifactId>my-project</artifactId>
     <packaging>jar</packaging>
-    <version>0.1.0</version>
+    <version>0.2</version>
 
     <!-- tag::joda[] -->
      <properties>
-           <java.version>1.8</java.version>
+           <java.version>1.8</    <groupId>org.springframework</groupId>
+    <artifactId>jb-hello-world-maven</artifactId>java.version>
            <maven.compiler.source>1.6</maven.compiler.source>
            <maven.compiler.target>1.6</maven.compiler.target>
      </properties>
@@ -53,7 +54,7 @@
     <repository>
       <id>github</id>
       <name>GitHub Packages</name>
-      <url>https://maven.pkg.github.com/CanarysPlayground/java-hello-world-with-maven</url>
+      <url>https://maven.pkg.github.com/demo-canarys/java-maven-packages</url>
     </repository>
   </distributionManagement>
     
