--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
 
     <!-- tag::joda[] -->
      <properties>
-           <java.version>1.8</    <groupId>org.springframework</groupId>
-    <artifactId>jb-hello-world-maven</artifactId>java.version>
+           <java.version>1.8</java.version>
            <maven.compiler.source>1.6</maven.compiler.source>
            <maven.compiler.target>1.6</maven.compiler.target>
      </properties>
